# shelly

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: internal.h  run.h  str.h
src/: internal.c  main.c  run.c  str.c
